--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 </head>
 <body>
+  <div class="header">
+    <h1>Header</h1>
+    <p>My supercool header</p>
+  </div> 
 
     <div id="app" data-state="gallery">
         <div class="gallery">
