--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="js/script.js"></script>
+<script defer data-domain="askolankirjasto.github.io/hakalehto" src="https://plausible.io/js/script.js"></script>
 
 </head>
 <body>
