--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="js/script.js"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="e3f2efe9-bb7c-420d-846d-3e939224100f"></script>
 
 </head>
 <body>
