--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
 <link rel="stylesheet" href="css/style.css">
-<script defer data-domain="askolankirjasto.github.io/Hakalehto" src="https://plausible.io/js/script.js"></script>
+<script defer data-domain="askolankirjasto.github.io/hakalehto" src="https://plausible.io/js/script.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
